feat: update virtual thread metrics and benchmarks